--- a/package.json
+++ b/package.json
@@ -10,6 +10,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.10.3"
+    "@astrojs/react": "^2.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "github:fortawesome/react-fontawesome",
+    "@types/react": "^18.2.19",
+    "@types/react-dom": "^18.2.7",
+    "astro": "^2.10.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sass": "^1.64.2"
   }
 }
